--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Portafolio</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="principal">
@@ -24,6 +24,6 @@
         </div>
     </div>
 
-    <script src="funcion.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
