--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <div class="principal">
         <div class="flex1">
             <div class="sub_flex1">
-                <h5>Hola me presento</h5>
-                <h3>Julian Murcia</h3>
-                <h4>soy un desarrollador frontend</h4>
+                <h5 class="flexi">Hola me presento</h5>
+                <h3 class="flexi">Julian Murcia</h3>
+                <h4 class="flexi">soy un desarrollador frontend</h4>
+                <p class="flexi" style="width: 300px;">soy desarrollador con experiencia en manejo de javascript, java, typescrpt y angular</p>
+                <img src="foto.jpg" alt="" class="foto">
             </div>
             
         </div>
